<resources>
    <string name="app_name">InThingy</string>
    <string name="text_device_id">Device ID:</string>
    <string name="text_select_sensors">Select sensors:</string>
    <string name="text_button_check_data">DATA</string>
    <string name="text_sensor_data_default"> \n \n \n</string>
    <string name="prompt_spinner_sensors">Choose sensors</string>
    <string name="prompt_spinner_encryption">Choose encryption</string>
    <string name="prompt_spinner_send_mode">Choose adapter</string>
    <string name="text_choose_encryption">Choose encryption:</string>
    <string name="text_choose_send_mode">Send ViA:</string>
    <string name="text_destination">Enter destination:</string>
    <string name="text_choose_destination">CHOOSE</string>
    <string name="hint_et_destination">IP:PORT  THING_NAME</string>
    <string name="text_button_preview_message">PREVIEW</string>
    <string name="text_button_send_message">SEND</string>
    <string name="text_respond_service">Manipulate reply service:</string>
    <string name="text_button_start_service">START</string>
    <string name="text_button_stop_service">STOP</string>
    <string name="multiprocess_preferences_authority" translatable="false">com.gdubina.multiprocesspreferences.PREFFERENCE_AUTHORITY</string>
    <string name="text_menu_reply_service">AutoReply</string>
    <string name="name_sensor">Sensor</string>
    <string name="text_autoreply_off">AutoReply service off</string>
    <string name="text_autoreply_on">AutoReply service on</string>
    <string name="error_no_sensor_selected">Please choose sensor\'s which data you want to send!</string>
    <string name="error_no_destination">Please enter or select destination!</string>
    <string name="error_invalid_adress_fromat">Invalid address format!</string>
    <string name="text_select_destination">Select destination:</string>
    <string name="error_cant_get_ip">Your IP address couldn\'t be found.\nAbort!</string>
    <string name="text_finding_sensors">Finding sensors…</string>
    <string name="text_all_sensors_checked">All sensors checked</string>
    <string name="error_checking_sensors">Error while checking sensors!</string>
    <string name="error_no_internet_conn">You aren\'t connected to the Internet!\nAbort</string>
    <string name="error_device_id">Device ID should have 8 characters!\nPlease fix it.</string>
    <string name="ok">OK</string>
    <string name="illumination">Illumination</string>
    <string name="proximity">Proximity</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="error">ERROR</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="error_no_location_perms">Application don\'t have permission to access location If you want to get GPS data, please enable permission in Settings</string>
    <string name="error_cant_get_location">GPS data can\'t be accessed. Please turn GPS or Network ON.\nIf Network is ON please check flag in Settings-Security to use Network for location.</string>
    <string name="text_menu_show_messages">MESSAGES</string>
    <string name="text_recevied_messages">Received messages</string>
    <string name="text_message_replied">Message replied!</string>
    <string name="text_message_info_title">Message info</string>
    <string name="message_sent">Message sent!</string>
    <string name="success">SUCCESS</string>
    <string-array name="encryption_array">
        <item>NONE</item>
    </string-array>
    <string-array name="send_mode_array">
        <item>Internet</item>
    </string-array>
    <string-array name="some_destinations">
        <item>192.168.43.135:25000 THING_12</item>
        <item>10.0.3.15:25000 THING_44</item>
        <item>10.129.71.41:25000 THING_45</item>
    </string-array>
</resources>
